# enterprise-work-order-ai-assistant

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.smoke.yml  docker-compose.yml
apps/ai-service/: Dockerfile  alembic.ini  pyproject.toml
apps/ai-service/alembic/: env.py
apps/ai-service/alembic/versions/: 20260718_01_knowledge_pgvector.py  20260718_02_quality_loop.py  20260720_03_quality_callback_delivery.py
apps/ai-service/app/: __init__.py  config.py  db.py  main.py  migration_config.py  pgvector_bootstrap.py
apps/ai-service/app/agent/: __init__.py  composer.py  graph.py  router.py  state.py
apps/ai-service/app/analytics/: __init__.py  catalog.py  client.py  models.py  planner.py  router.py  service.py  sql_policy.py
apps/ai-service/app/api/: __init__.py  models.py
apps/ai-service/app/knowledge/: __init__.py  bm25.py  bootstrap.py  hybrid.py  ingest.py  loader.py  models.py  repository.py  worker.py
apps/ai-service/app/llm/: __init__.py  ark.py  contracts.py  errors.py  gateway.py  offline.py  openai_compatible.py  registry.py
apps/ai-service/app/quality/: __init__.py  aggregator.py  callback.py  event_client.py  models.py  processor.py  repository.py  rules.py  schema.py  worker.py
apps/ai-service/app/security/: __init__.py  jwt.py
apps/ai-service/app/tools/: __init__.py  work_order_client.py
apps/ai-service/enterprise_work_order_ai_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/ai-service/tests/agent/: test_graph.py  test_router.py
apps/ai-service/tests/analytics/: test_api.py  test_catalog.py  (+2 more)
(+200 files in other folders)
