[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-work-order-ai-service"
version = "0.1.0"
description = "Grounded RAG and tool orchestration for the synthetic work-order demo"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "httpx>=0.28,<1",
    "langgraph>=0.4,<2",
    "jieba>=0.42.1,<1",
    "rank-bm25>=0.2.2,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "alembic>=1.15,<2",
    "pgvector>=0.4,<1",
    "fastembed>=0.7,<1",
    "cryptography>=45,<47",
    "sqlglot>=26,<28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.25,<1",
    "respx>=0.22,<1",
    "ruff>=0.11,<1",
    "mypy>=1.15,<2",
    "testcontainers[postgres]>=4.10,<5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["app"]

[[tool.mypy.overrides]]
module = ["jieba", "rank_bm25"]
ignore_missing_imports = true

